Style form inputs

--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
         </h1>
 
         <p class="about">
-          I’m a software developer! I can help you build a product , feature or
+          I'm a software developer! I can help you build a product , feature or
           website Look through some of my work and experience! If you like what
-          you see and have a project you need coded, don’t hestiate to contact
+          you see and have a project you need coded, don't hestiate to contact
           me.
         </p>
       </section>
@@ -394,15 +394,15 @@
         </div>
         <ul class="skill-list"></ul>
       </section>
-   
-      <footer class="reach-out">
+      <!--contact section-->
+      <footer id="reach-out">
         <h2 class="contact-me" id="contact">Contact me</h2>
         <p class="cont-input">
           If you have an application you are interested in developing, a feature
           that you need built or a project that needs coding. I'd love to help
           with it
         </p>
-        <form action="" method="post">
+        <form action="https://formspree.io/f/{form_id}" method="post">
           <ul class="ul-form">
             <li>
               <input
@@ -419,7 +419,7 @@
                 class="email"
                 type="email"
                 name="email_address"
-                placeholder="domain@gmail.com"
+                placeholder="user@gmail.com"
                 required
               />
             </li>
@@ -437,7 +437,6 @@
             </li>
           </ul>
         </form>
-        
       </footer>
     </main>
   </body>
