add border radius

--- a/index.html
+++ b/index.html
@@ -395,14 +395,14 @@
         <ul class="skill-list"></ul>
       </section>
       <!--contact section-->
-      <footer id="reach-out">
+      <section id="reach-out">
         <h2 class="contact-me" id="contact">Contact me</h2>
         <p class="cont-input">
           If you have an application you are interested in developing, a feature
           that you need built or a project that needs coding. I'd love to help
           with it
         </p>
-        <form action="https://formspree.io/f/{form_id}" method="post">
+        <form action="https://formspree.io/f/mbjzdeql" method="post">
           <ul class="ul-form">
             <li>
               <input
@@ -437,7 +437,7 @@
             </li>
           </ul>
         </form>
-      </footer>
+      </section>
     </main>
   </body>
 </html>
