fix ul tags inside form

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="about-section">
         <h1 class="intro">
           About <br />
           Myself
@@ -402,40 +402,34 @@
           that you need built or a project that needs coding. I'd love to help
           with it
         </p>
+        
         <form action="https://formspree.io/f/mbjzdeql" method="post">
-          <ul class="ul-form">
-            <li>
-              <input
-                class="username"
-                type="text"
-                name="username"
-                placeholder="username"
-                required
-                maxlength="30"
-              />
-            </li>
-            <li>
-              <input
-                class="email"
-                type="email"
-                name="email_address"
-                placeholder="user@gmail.com"
-                required
-              />
-            </li>
-            <li>
-              <textarea
-                class="comment"
-                name="comments"
-                placeholder="Write your message here"
-                required
-                maxlength="500"
-              ></textarea>
-            </li>
-            <li class="submit">
-              <button class="submit" type="submit">Get It Touch</button>
-            </li>
-          </ul>
+          <input
+            class="username"
+            type="text"
+            name="username"
+            placeholder="username"
+            required
+            maxlength="30"
+          />
+
+          <input
+            class="email"
+            type="email"
+            name="email_address"
+            placeholder="user@gmail.com"
+            required
+          />
+
+          <textarea
+            class="comment"
+            name="comments"
+            placeholder="Write your message here"
+            required
+            maxlength="500"
+          ></textarea>
+
+          <button class="submit" type="submit">Get It Touch</button>
         </form>
       </section>
     </main>
