add desktop version

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       <div class="logo">
         <a class="logo-text" href="#">My Logo</a>
       </div>
+      <nav>
+        <ul class="desc-nav">
+          <li><a href="#">Portoflio</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
       <nav class="menu-icon">
         <img src="images/icons/menu.png" alt="menu-button" />
       </nav>
@@ -88,7 +95,8 @@
           <div class="project-img">
             <a href="#">
               <img
-                src="images/about-image/tonic-project.png"
+                src="/images/about-image/Snapshoot_Portfolio.png"
+                class="project-1"
                 alt="tonic-project"
               />
             </a>
@@ -103,6 +111,7 @@
                 <li>
                   <img
                     src="./images/about-image/Counter.png"
+                    class="small-dot"
                     alt="counter.png"
                   />
                 </li>
@@ -110,6 +119,7 @@
                 <li>
                   <img
                     src="./images/about-image/Counter.png"
+                    class="small-dot"
                     alt="counter.png"
                   />
                 </li>
@@ -138,14 +148,6 @@
 
       <section class="work-card">
         <div class="project-container">
-          <div class="project-img">
-            <a href="#">
-              <img
-                src="images/about-image/multi-post-stories-project.png"
-                alt="multi-post-stories-project"
-              />
-            </a>
-          </div>
           <div class="about-project">
             <div class="project-title">
               <h4>Multi-Post Stories</h4>
@@ -156,6 +158,7 @@
                 <li>
                   <img
                     src="./images/about-image/Counter.png"
+                    class="small-dot"
                     alt="counter.png"
                   />
                 </li>
@@ -163,6 +166,7 @@
                 <li>
                   <img
                     src="./images/about-image/Counter.png"
+                    class="small-dot"
                     alt="counter.png"
                   />
                 </li>
@@ -186,6 +190,15 @@
               <button type="submit" class="view-btn">See Project</button>
             </div>
           </div>
+          <div class="project-img">
+            <a href="#">
+              <img
+                src="images/about-image/multi-post-stories-project.png"
+                class="project-1"
+                alt="multi-post-stories-project"
+              />
+            </a>
+          </div>
         </div>
       </section>
 
@@ -195,6 +208,7 @@
             <a href="#">
               <img
                 src="images/about-image/tonic-project-2.png"
+                class="project-1"
                 alt="tonic-project-1"
               />
             </a>
@@ -209,6 +223,7 @@
                 <li>
                   <img
                     src="./images/about-image/Counter.png"
+                    class="small-dot"
                     alt="counter.png"
                   />
                 </li>
@@ -216,6 +231,7 @@
                 <li>
                   <img
                     src="./images/about-image/Counter.png"
+                    class="small-dot"
                     alt="counter.png"
                   />
                 </li>
@@ -248,6 +264,7 @@
             <a href="#">
               <img
                 src="./images/about-image/multi-post-stories-project-2.png"
+                class="project-1"
                 alt="multi-post-stories-project-2"
               />
             </a>
@@ -262,6 +279,7 @@
                 <li>
                   <img
                     src="./images/about-image/Counter.png"
+                    class="small-dot"
                     alt="counter.png"
                   />
                 </li>
@@ -269,6 +287,7 @@
                 <li>
                   <img
                     src="./images/about-image/Counter.png"
+                    class="small-dot"
                     alt="counter.png"
                   />
                 </li>
@@ -306,60 +325,60 @@
           you see and have a project you need coded, don't hestiate to contact
           me.
         </p>
-      </section>
 
-      <section class="social-media-container">
-        <h4 class="social-media-title">Let's Connect</h4>
-        <ul class="social-media-content">
-          <li>
-            <a href="#">
-              <img
-                class="social-media-icons"
-                src="./images/icons/twitter.png"
-                alt="Twitter Icon"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                class="social-media-icons"
-                src="./images/icons/linkedin.png"
-                alt="LinkedIn Icon"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                class="social-media-icons"
-                src="./images/icons/media.png"
-                alt="Media Icon"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                class="social-media-icons"
-                src="./images/icons/github.png"
-                alt="Github Icon"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                class="social-media-icons"
-                src="./images/icons/victory.png"
-                alt="Victory Icon"
-              />
-            </a>
-          </li>
-        </ul>
-        <div class="btn-container">
-          <button type="submit" class="view-btn">Get my resume</button>
-        </div>
+        <section class="social-media-container">
+          <h4 class="social-media-title">Let's Connect</h4>
+          <ul class="social-media-content">
+            <li>
+              <a href="#">
+                <img
+                  class="social-media-icons"
+                  src="./images/icons/twitter.png"
+                  alt="Twitter Icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  class="social-media-icons"
+                  src="./images/icons/linkedin.png"
+                  alt="LinkedIn Icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  class="social-media-icons"
+                  src="./images/icons/media.png"
+                  alt="Media Icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  class="social-media-icons"
+                  src="./images/icons/github.png"
+                  alt="Github Icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  class="social-media-icons"
+                  src="./images/icons/victory.png"
+                  alt="Victory Icon"
+                />
+              </a>
+            </li>
+          </ul>
+          <div class="btn-container">
+            <button type="submit" class="view-btn">Get my resume</button>
+          </div>
+        </section>
       </section>
       <section class="skills-section">
         <div class="skill-label-container">
@@ -402,8 +421,8 @@
           that you need built or a project that needs coding. I'd love to help
           with it
         </p>
-        
-        <form action="https://formspree.io/f/mbjzdeql" method="post">
+
+        <form action="https://formspree.io/f/xbjwvonn" method="post">
           <input
             class="username"
             type="text"
