fix image not showing in cards

--- a/index.html
+++ b/index.html
@@ -93,98 +93,6 @@
       </section>
       <section class="work-card">
         <div class="project-container">
-          <div class="project-img img-3"></div>
-          <div class="about-project">
-            <div class="project-title">
-              <h4>Tonic</h4>
-            </div>
-            <div class="project-info">
-              <ul>
-                <li class="role">Canopy</li>
-                <li>
-                  <img
-                    src="./images/about-image/Counter.png"
-                    class="small-dot"
-                    alt="counter.png"
-                  />
-                </li>
-                <li class="client-name">Back End Dev</li>
-                <li>
-                  <img
-                    src="./images/about-image/Counter.png"
-                    class="small-dot"
-                    alt="counter.png"
-                  />
-                </li>
-                <li class="client-name">2015</li>
-              </ul>
-            </div>
-            <div class="project-description">
-              <p>
-                A daily selection of privately personalized reads; no accounts
-                or sign-ups required.
-              </p>
-            </div>
-            <div class="tags">
-              <ul>
-                <li>html</li>
-                <li>css</li>
-                <li>javascript</li>
-              </ul>
-            </div>
-            <div class="btn-container">
-              <button type="submit" class="view-btn">See Project</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="project-container">
-          <div class="about-project">
-            <div class="project-title">
-              <h4>Multi-Post Stories</h4>
-            </div>
-            <div class="project-info">
-              <ul>
-                <li class="role">Canopy</li>
-                <li>
-                  <img
-                    src="./images/about-image/Counter.png"
-                    class="small-dot"
-                    alt="counter.png"
-                  />
-                </li>
-                <li class="client-name">Back End Dev</li>
-                <li>
-                  <img
-                    src="./images/about-image/Counter.png"
-                    class="small-dot"
-                    alt="counter.png"
-                  />
-                </li>
-                <li class="client-name">2015</li>
-              </ul>
-            </div>
-            <div class="project-description">
-              <p>
-                A daily selection of privately personalized reads; no accounts
-                or sign-ups required.
-              </p>
-            </div>
-            <div class="tags">
-              <ul>
-                <li>html</li>
-                <li>css</li>
-                <li>javascript</li>
-              </ul>
-            </div>
-            <div class="btn-container">
-              <button type="submit" class="view-btn">See Project</button>
-            </div>
-          </div>
-          <div class="project-img img-4"></div>
-        </div>
-
-        <div class="project-container">
           <div class="project-img img-1"></div>
           <div class="about-project">
             <div class="project-title">
@@ -231,14 +139,13 @@
         </div>
 
         <div class="project-container">
-          <div class="project-img img-2"></div>
           <div class="about-project">
             <div class="project-title">
               <h4>Multi-Post Stories</h4>
             </div>
             <div class="project-info">
               <ul>
-                <li class="role">Canopy</li>
+                <li class="role">Facebook</li>
                 <li>
                   <img
                     src="./images/about-image/Counter.png"
@@ -246,7 +153,7 @@
                     alt="counter.png"
                   />
                 </li>
-                <li class="client-name">Back End Dev</li>
+                <li class="client-name">Full Stack Dev</li>
                 <li>
                   <img
                     src="./images/about-image/Counter.png"
@@ -259,13 +166,15 @@
             </div>
             <div class="project-description">
               <p>
-                A daily selection of privately personalized reads; no accounts
-                or sign-ups required.
+                Experimental content creation feature that allows users to add
+                to an existing story over the course of a day without spamming
+                their friends.
               </p>
             </div>
             <div class="tags">
               <ul>
                 <li>html</li>
+                <li>Ruby on rails</li>
                 <li>css</li>
                 <li>javascript</li>
               </ul>
@@ -274,6 +183,102 @@
               <button type="submit" class="view-btn">See Project</button>
             </div>
           </div>
+          <div class="project-img img-2"></div>
+        </div>
+
+        <div class="project-container">
+          <div class="project-img img-4"></div>
+          <div class="about-project">
+            <div class="project-title">
+              <h4>Facebook 360</h4>
+            </div>
+            <div class="project-info">
+              <ul>
+                <li class="role">Facebook</li>
+                <li>
+                  <img
+                    src="./images/about-image/Counter.png"
+                    class="small-dot"
+                    alt="counter.png"
+                  />
+                </li>
+                <li class="client-name">Full Stack Dev</li>
+                <li>
+                  <img
+                    src="./images/about-image/Counter.png"
+                    class="small-dot"
+                    alt="counter.png"
+                  />
+                </li>
+                <li class="client-name">2015</li>
+              </ul>
+            </div>
+            <div class="project-description">
+              <p>
+                Exploring the future of media in Facebook's first Virtual
+                Reality app; a place to discover and enjoy 360 photos and videos
+                on Gear VR.
+              </p>
+            </div>
+            <div class="tags">
+              <ul>
+                <li>html</li>
+                <li>Ruby on rails</li>
+                <li>css</li>
+                <li>javascript</li>
+              </ul>
+            </div>
+            <div class="btn-container">
+              <button type="submit" class="view-btn">See Project</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-container">
+          <div class="about-project">
+            <div class="project-title">
+              <h4>Uber Navigation</h4>
+            </div>
+            <div class="project-info">
+              <ul>
+                <li class="role">Uber</li>
+                <li>
+                  <img
+                    src="./images/about-image/Counter.png"
+                    class="small-dot"
+                    alt="counter.png"
+                  />
+                </li>
+                <li class="client-name">Lead Developer</li>
+                <li>
+                  <img
+                    src="./images/about-image/Counter.png"
+                    class="small-dot"
+                    alt="counter.png"
+                  />
+                </li>
+                <li class="client-name">2018</li>
+              </ul>
+            </div>
+            <div class="project-description">
+              <p>
+                A smart assistant to make driving more safe, efficient, and fun
+                by unlocking your most expensive computer: your car.
+              </p>
+            </div>
+            <div class="tags">
+              <ul>
+                <li>html</li>
+                <li>Ruby on rails</li>
+                <li>css</li>
+                <li>javascript</li>
+              </ul>
+            </div>
+            <div class="btn-container">
+              <button type="submit" class="view-btn">See Project</button>
+            </div>
+          </div>
+          <div class="project-img img-3"></div>
         </div>
       </section>
       <section class="middle-section">
@@ -385,42 +390,42 @@
       <!--contact section-->
       <section id="reach-out">
         <div class="form-style">
-        <h2 class="contact-me" id="contact">Contact me</h2>
-        <p class="cont-input">
-          If you have an application you are interested in developing, a feature
-          that you need built or a project that needs coding. I'd love to help
-          with it
-        </p>
+          <h2 class="contact-me" id="contact">Contact me</h2>
+          <p class="cont-input">
+            If you have an application you are interested in developing, a
+            feature that you need built or a project that needs coding. I'd love
+            to help with it
+          </p>
 
-        <form action="https://formspree.io/f/xbjwvonn" method="post">
-          <input
-            class="username"
-            type="text"
-            name="username"
-            placeholder="username"
-            required
-            maxlength="30"
-          />
+          <form action="https://formspree.io/f/xbjwvonn" method="post">
+            <input
+              class="username"
+              type="text"
+              name="username"
+              placeholder="username"
+              required
+              maxlength="30"
+            />
 
-          <input
-            class="email"
-            type="email"
-            name="email_address"
-            placeholder="user@gmail.com"
-            required
-          />
+            <input
+              class="email"
+              type="email"
+              name="email_address"
+              placeholder="user@gmail.com"
+              required
+            />
 
-          <textarea
-            class="comment"
-            name="comments"
-            placeholder="Write your message here"
-            required
-            maxlength="500"
-          ></textarea>
+            <textarea
+              class="comment"
+              name="comments"
+              placeholder="Write your message here"
+              required
+              maxlength="500"
+            ></textarea>
 
-          <button class="submit" type="submit">Get It Touch</button>
-        </form>
-      </div>
+            <button class="submit" type="submit">Get It Touch</button>
+          </form>
+        </div>
       </section>
     </main>
   </body>
