Update meta data

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="A personal portfolio website is a great way to showcase your work and your skills to potential employers."
+      content="Hassan's Full-stack web development portfolio ."
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
