--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"> 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
@@ -20,14 +21,15 @@
       </div>
       <nav>
         <ul class="desc-nav">
-          <li><a href="#">Portoflio</a></li>
+          <li><a href="#">Portfolio</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
-      <nav class="menu-icon">
-        <img src="images/icons/menu.png" alt="menu-button" />
-      </nav>
+      <div class="menu-icon">
+        <i class="fa fa-bars menu-icon" id="menu-icon"></i> 
+        <i class="fa fa-xmark menu-icon" id="x-icon"></i> 
+      </div>
     </header>
     <main class="main-content">
       <section class="first-section">
