fix linter error

--- a/index.html
+++ b/index.html
@@ -429,9 +429,9 @@
         </div>
       </section>
       <!--contact section-->
-      <section id="reach-out" id="contact">
+      <section  id="contact" >
         <div class="form-style">
-          <h2 class="contact-me" id="contact">Contact me</h2>
+          <h2 class="contact-me" id="contact" >Contact me</h2>
           <p class="cont-input">
             If you have an application you are interested in developing, a
             feature that you need built or a project that needs coding. I'd love
