--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         
         <section class="header-info">
-          <h1 class="intro">I'm Momanyi <br />Glad to See you!</h1>
+          <h2 class="intro">I'm Momanyi <br />Glad to See you!</h2>
           <p class="about">
             I’m a software developer! I can help you build a product , feature
             or website Look through some of my work and experience! If you like
@@ -429,9 +429,9 @@
         </div>
       </section>
       <!--contact section-->
-      <section id="reach-out" id="contact">
+      <section class="reach-out" id="contact">
         <div class="form-style">
-          <h2 class="contact-me" id="contact">Contact me</h2>
+          <h2 class="contact-me">Contact me</h2>
           <p class="cont-input">
             If you have an application you are interested in developing, a
             feature that you need built or a project that needs coding. I'd love
