Fix javascript not working fine problem

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body >
     <header class="header" id="header">
       <div class="logo" id="logo">
         <a class="logo-text" href="#">My Logo</a>
@@ -469,7 +469,6 @@
         </div>
       </section>
     </main>
-
-    <script src="script.js"></script>
+    <script type="module" defer src="./script.js"></script>
   </body>
 </html>
