fix  link to portfolio

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <nav>
         <ul class="desc-nav" id="desc-nav">
-          <li id="list-items-1"><a href="#main-container">Portfolio</a></li>
+          <li id="list-items-1"><a href="#work-card">Portfolio</a></li>
           <li id="list-items-2"><a  href="#about">About</a></li>
           <li id="list-items-3"><a  href="#contact">Contact</a></li>
         </ul>
@@ -132,7 +132,7 @@
           </section>
         </section>
       </section>
-      <section class="work-card">
+      <section class="work-card" id="work-card">
         <div class="project-container">
           <div class="project-img img-1"></div>
           <div class="about-project">
