fix logo and close icon size

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header class="header" id="header">
     <div class="logo" id="logo">
-      <a class="logo-text" href="#">My Logo</a>
+      <a class="logo-text" href="#">MOMANYI</a>
     </div>
     <div class="window" id="window">
       <div class="popup">
