Design Popup window for Desktop Version

--- a/index.html
+++ b/index.html
@@ -73,13 +73,16 @@
         </ul>
       </div>
       <img class="modal-img" src="" id="modal-image">
+      <div class="modal-footer">
+        <div class="footer-desc">
       <p class="modal-desc" id="modal-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has
         been the industry's
         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
         a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
         remaining essent</p>
-      <div class="modal-footer">
+      </div>
+      <div class="footer-list">
         <div class="modal-tech-list">
           <ul id="ul">
 
@@ -94,6 +97,7 @@
             <button id="see-live">See Source <img class="icon" src="./images/icons/git-icon.svg" alt=""></button>
           </a>
         </div>
+      </div>
       </div>
     </div>
   </div>
