fix linter error

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li id="client-year">2015</li>
         </ul>
       </div>
-      <img class="modal-img" src="" id="modal-image">
+      <img class="modal-img" src="#" alt="modal image" id="modal-image"> 
       <div class="modal-footer">
         <div class="footer-desc">
       <p class="modal-desc" id="modal-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -91,10 +91,10 @@
         <hr>
         <div class="modal-buttons">
           <a id="see-live" href="#">
-            <button>See Live <img class="icon" src="./images/icons/live-icon.svg" alt="Live Icon"></button>
+            <div class="see-live" >See Live <img class="icon" src="./images/icons/live-icon.svg" alt="Live Icon"></div>
           </a>
           <a id="see-source" href="#">
-            <button id="see-live">See Source <img class="icon" src="./images/icons/git-icon.svg" alt=""></button>
+            <div class="see-live" >See Source <img class="icon" src="./images/icons/git-icon.svg" alt=" source-image"></div>
           </a>
         </div>
       </div>
