fix data not saving in local storage

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           to help with it
         </p>
         <form action="https://formspree.io/f/xbjwvonn" id="form" method="post">
-          <input class="username" id="formName" type="text" name="username" placeholder="username" required
+          <input class="username" id="name" type="text" name="username" placeholder="username" required
             maxlength="30" />
 
           <input class="email" type="email" id="email" name="email_address" placeholder="user@gmail.com" required />
