add resume link

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </li>
           </ul>
           <div class="btn-container">
-            <button type="submit" class="view-btn">Get my resume</button>
+            <button onclick="location.href= 'https://drive.google.com/file/d/1s5E3axBAA_pQnh1pFBc_ffdewD4ZFhb9/view?usp=sharing'" type="submit" class="view-btn">Get my resume</button>
           </div>
         </div>
       </div>
@@ -290,7 +290,7 @@
             maxlength="500"></textarea>
           <div>
             <button class="submit" type="submit" id="submit">Get It Touch</button>
-            <button class="submit" type="reset" id="reset">Reset</button>
+            <!-- <button class="submit" type="reset" id="reset">Reset</button> -->
           </div>
         </form>
       </div>
